# weiss_gripper_ieg76

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  todo
launch/: weiss_gripper_ieg76.launch
meshes/: IEG76-030.stl  ieg55.stl  ieg76.stl
src/: driver.py  driver_logic.py  serial_comm.py  state_publisher.py  test_client.py  weiss_gripper_ieg76.py
src/weiss_gripper_ieg76/: driver.py  driver_logic.py  serial_comm.py  state_publisher.py  test_client.py
srv/: ConfigTrigger.srv  GetAllParam.srv  GetClosingPos.srv  GetGraspingForce.srv  GetOpeningPos.srv  Move.srv  SetAllParam.srv  SetClosingPos.srv  SetForce.srv  SetGraspingForce.srv  SetOpeningPos.srv
urdf/: ieg55.urdf.xacro  ieg55_adapter.urdf.xacro  ieg76.urdf.xacro  ieg76_adapter.urdf.xacro  ieg76grip.urdf.xacro
