<?xml version="1.0"?>
<package format="2">
  <name>weiss_gripper_ieg76</name>
  <version>0.0.0</version>
  <description>This is the ros package of the driver for the Weiss Robotics gripper, model IEG 55-020 and 76-030.</description>

  <maintainer email="philipp.tenbrock@ipa.fraunhofer.de">ipa-pgt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://www.ipa.fraunhofer.de</url>


  <author email="viorel.petrut.draghici@ipa.fraunhofer.de">lth-vd</author>
  <author email="philipp.tenbrock@ipa.fraunhofer.de">ipa-pgt</author>


  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-transitions</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
